@@ -601,6 +601,7 @@ coroutines
 countbits
 countones
 cout
+covergroup
 cpp
 cppstyle
 cpu
